# WEB_HW_4

./: main.py
my_first_server/: Dockerfile  main.py  pyproject.toml
storage/: data.json
